Text color change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
     </div>
 
     <mat-form-field appearance="fill">
-      <mat-label><h3>Select Time Slot</h3></mat-label>
-      <select matNativeControl>
+      <mat-label><h3 style="color: lightskyblue;">Select Time Slot</h3></mat-label>
+      <select matNativeControl style="color: lightskyblue;">
         <option value="101">Choose slot</option>
         <option value="101">9.00am-10.00am</option>
         <option value="102">11.00am-12.00am</option>
