Some color changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       <input [(ngModel)]="newItem" placeholder="Add Interviewer" class="addText">
     </div>
     <div class="addInter">
-      <input [(ngModel)]="newItem" placeholder="Add Interviewee" class="addText">
+      <input [(ngModel)]="newItem1" placeholder="Add Interviewee" class="addText">
     </div>
 
     <mat-form-field appearance="fill">
