--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,7 +16,7 @@
   background-size: 100% 100%;
 }
 .main1 {
-  width: 500px;
+  width: 1000px;
   text-align: center;
   margin: 0 auto;
   border: 2px solid #d7d7d7;
@@ -24,6 +24,10 @@
   margin-top: 10px;
 
   font-family: sans-serif;
+}
+.table{
+  width: 1000px;
+  font-size: 20px;
 }
 h1{
   text-align: center;
@@ -57,7 +61,7 @@ ul{
 }
 li{
   border-bottom: 1px solid #bfbfbf;
-  background-color: #d7d7d7;
+
   padding: 10px 0px;
   margin-bottom: 5px;
 }
