--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,7 +31,7 @@
 }
 h1{
   text-align: center;
-  background-color: #5c8297;
+  background-color: teal;
   padding: 30px 0px;
   margin-top: 0px;
   color: white;
